--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD app</title>
+    <title>Edit User</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <div class="h-screen md:flex">
-        <div class="relative overflow-hidden md:flex w-1/2 bg-gradient-to-tr from-blue-800 to-purple-700 i justify-around items-center hidden">
+        <div class="relative overflow-hidden md:flex w-1/2 bg-gradient-to-tr from-blue-800 to-purple-700 justify-around items-center hidden">
             <div>
                 <h1 class="text-white font-bold text-6xl font-sans">CRUD App</h1>
                 <p class="text-white mt-1">Uses Express js and EJS</p>
@@ -21,31 +21,31 @@
             <div class="absolute -top-20 -right-20 w-80 h-80 border-4 rounded-full border-opacity-30 border-t-8"></div>
         </div>
         <div class="flex md:w-1/2 justify-center py-10 items-center bg-white">
-            <form class="bg-white" method="post" action="/create">
+            <form class="bg-white" method="post" action="/edit/<%= user._id %>">
                 <div class="nav mb-5">
                     <a class="text-blue-600" href="/user">Read Users</a>
                 </div>
-                <h1 class="text-gray-800 font-bold text-2xl mb-1">Hello Again!</h1>
+                <h1 class="text-gray-800 font-bold text-2xl mb-1">Update User!</h1>
                 <p class="text-sm font-normal text-gray-600 mb-7">Welcome Back</p>
                 <div class="flex items-center border-2 py-2 px-3 rounded-2xl mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
                     </svg>
-                    <input class="pl-2 outline-none border-none" type="text" name="name" placeholder="Full name" />
+                    <input class="pl-2 outline-none border-none" type="text" name="name" placeholder="Full name" value="<%= user.name %>" />
                 </div>
                 <div class="flex items-center border-2 py-2 px-3 rounded-2xl mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
                     </svg>
-                    <input class="pl-2 outline-none border-none" type="text" name="email" placeholder="Email Address" />
+                    <input class="pl-2 outline-none border-none" type="text" name="email" placeholder="Email Address" value="<%= user.email %>" />
                 </div>
                 <div class="flex items-center border-2 py-2 px-3 rounded-2xl">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
                     </svg>
-                    <input class="pl-2 outline-none border-none" type="text" name="image" placeholder="Image URL" />
+                    <input class="pl-2 outline-none border-none" type="text" name="image" placeholder="Image URL" value="<%= user.image %>"/>
                 </div>
-                <button type="submit" class="block w-full bg-indigo-600 mt-4 py-2 rounded-2xl text-white font-semibold mb-2">Add User</button>
+                <button type="submit" class="block w-full bg-yellow-600 mt-4 py-2 rounded-2xl text-white font-semibold mb-2">Update User</button>
             </form>
         </div>
     </div>
